<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/cover_imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/profile_bg"
        app:layout_constraintDimensionRatio="H,5:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/circle_icon_shape"
        tools:src="@drawable/avatar_darkgrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/IconOnlyButton"
        app:icon="@drawable/settings_white_18dp"
        app:iconTint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/avatar_profile"
        app:layout_constraintTop_toTopOf="@id/avatar_profile"
        app:layout_constraintBottom_toBottomOf="@id/avatar_profile" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar_profile"
        tools:text="@string/profile_name" />

    <TextView
        android:id="@+id/profile_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name"
        tools:text="@string/profile_mail" />

    <TextView
        android:id="@+id/hours_spent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_mail"
        tools:text="@string/hour_spent" />


</androidx.constraintlayout.widget.ConstraintLayout>