<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="false"
    android:background="#424242"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:background="#FFFFFF"
        android:scaleType="fitXY"
        android:src="@drawable/sfondo_profilo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/first_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="26dp"
        app:cardCornerRadius="10dp"
        app:cardMaxElevation="20dp"
        app:layout_constraintEnd_toStartOf="@+id/second_favorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorite_here">

        <ImageView
            android:id="@+id/alien_cover"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:background="@drawable/alien"></ImageView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/second_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="26dp"
        app:cardCornerRadius="10dp"
        app:cardMaxElevation="20dp"
        app:layout_constraintEnd_toStartOf="@+id/third_favorite"
        app:layout_constraintLeft_toRightOf="@id/first_favorite"
        app:layout_constraintTop_toBottomOf="@+id/favorite_here">

        <ImageView
            android:id="@+id/hobbs_cover"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:background="@drawable/shaw"></ImageView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/third_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="26dp"
        app:cardCornerRadius="10dp"
        app:cardMaxElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/second_favorite"
        app:layout_constraintTop_toBottomOf="@+id/favorite_here">

        <ImageView
            android:id="@+id/iron_cover"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:background="@drawable/iron"></ImageView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/profile_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/googlesans_regular"
        android:text="@string/profile_name"
        android:textColor="#FDFDFD"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar_profile" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/circle_icon_shape"
        android:src="@drawable/avatar_darkgrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/favorite_here"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/googlesans_regular"
        android:text="@string/profile_mail"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name2" />

    <TextView
        android:id="@+id/hours_spent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/googlesans_bold"
        android:text="@string/hour_spent"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_mail" />

    <TextView
        android:id="@+id/favorite_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/googlesans_bold"
        android:text="@string/favorite_here"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="64dp"
        android:clickable="true"
        android:onClick="settings_OnClick"
        android:src="@drawable/settings_white_18dp"
        app:layout_constraintStart_toEndOf="@+id/avatar_profile"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>